--- a/front-end/src/app/pages/member-action/member-action.page.scss
+++ b/front-end/src/app/pages/member-action/member-action.page.scss
@@ -153,3 +153,11 @@ ion-content{
     // color: #fff;
     text-align: center;
   }
+
+  .red{
+    color: red;
+  }
+
+  .green{
+    color:blue;
+  }
