--- a/front-end/src/app/pages/memberinfor/memberinfor.page.html
+++ b/front-end/src/app/pages/memberinfor/memberinfor.page.html
@@ -35,8 +35,8 @@ class="ion-no-border"
           
             <ion-item> 
               <ion-icon name="alert-outline"></ion-icon>
-              <ion-label color="dark"><h2>Set Reminder(7 days)</h2> </ion-label>
-              <ion-toggle aria-label="Primary toggle"  [(ngModel)]="isToggleOn" color="primary" (ionChange)="changeToggle($event)"></ion-toggle>
+              <!-- <ion-label color="danger">Set Reminder(7 days)</ion-label> -->
+              <ion-toggle aria-label="Primary toggle"  [(ngModel)]="isToggleOn" color="primary" (ionChange)="changeToggle($event)">Set Alert (7 days)</ion-toggle>
             </ion-item>
 
             <ion-item>
