--- a/front-end/src/app/pages/gym-add/gym-add.page.html
+++ b/front-end/src/app/pages/gym-add/gym-add.page.html
@@ -12,31 +12,31 @@
      <form [formGroup] = "gymForm" (ngSubmit)="onSubmit()">
       <ion-list>
       <ion-item>
-        <ion-label position="floating">Gym Name </ion-label>
-        <ion-input formControlName="gym_name" type="text" required></ion-input>
+        <!-- <ion-label position="floating">Gym Name </ion-label> -->
+        <ion-input position="floating" label="Gym Name" formControlName="gym_name" type="text" required></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Gym Mobile</ion-label>
-        <ion-input formControlName="gym_mobile" type="text" required>
+        <!-- <ion-label position="floating">Gym Mobile</ion-label> -->
+        <ion-input position="floating" label="Gym Mobile" formControlName="gym_mobile" type="text" required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Gym Emergency Mobile</ion-label>
-        <ion-input formControlName="gym_emergency" type="text" required>
+        <!-- <ion-label position="floating">Gym Emergency Mobile</ion-label> -->
+        <ion-input position="floating" label="Gym Emergency Mobile" formControlName="gym_emergency" type="text" required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Gym GSTIN (optional)</ion-label>
-        <ion-input formControlName="gym_gstin"  type="text">
+        <!-- <ion-label position="floating">Gym GSTIN (optional)</ion-label> -->
+        <ion-input label="Gym GSTIN(Optional)" formControlName="gym_gstin"  type="text">
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Gym Lock ID</ion-label>
-        <ion-input formControlName="gym_lockId"  type="text">
+        <!-- <ion-label position="floating">Gym Lock ID</ion-label> -->
+        <ion-input position="floating" label="Gym Lock ID" formControlName="gym_lockId"  type="text">
         </ion-input>
       </ion-item>
 
