--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -5,29 +5,28 @@ class="ion-no-border"
 >
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button default-href="#"></ion-back-button>
-    </ion-buttons>
-    <ion-list>
-      <ion-item>
+      <ion-back-button></ion-back-button>
+   </ion-buttons>
+     
+     <ion-item>
         <ion-select
           fill="outline"
           justify="space-between"
           label="Select Gym"
           aria-label="Gym_Choice"
           placeholder="Select Gym"
-          interface="popover"
+          
           (ionChange)="selecthandleChange($event)"
           [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
           slot="end"
           (ionCancel)="pushLog('ionCancel fired')"
-          (ionDismiss)="pushLog('ionDismiss fired')"
-           
+          (ionDismiss)="pushLog('ionDismiss fired')"           
         >
         <ion-select-option *ngFor="let gym of gyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>
             
         </ion-select>
+      
       </ion-item>
-    </ion-list>
    
   </ion-toolbar>
 </ion-header>
@@ -35,8 +34,7 @@ class="ion-no-border"
 <ion-content [fullscreen]="true">
   
   <div class="div-0">
-    <ion-label color="dark"> <h2>Report</h2> </ion-label>
-   
+    <ion-label color="dark"> <h2><strong>Report</strong></h2> </ion-label>   
       <ion-item >        
         <ion-list>
           
@@ -57,8 +55,9 @@ class="ion-no-border"
             </ion-item> 
           
             <ion-item> 
-              <ion-label color="dark"><h2>Set Reminder(7 days)</h2> </ion-label>
-              <ion-toggle aria-label="Primary toggle" color="primary" [checked]="true"></ion-toggle>
+              
+              <ion-toggle justify="space-between" aria-label="primary" color="primary" [checked]="true">Set Reminder(7 days)</ion-toggle>
+               
             </ion-item>
           
           
@@ -71,16 +70,17 @@ class="ion-no-border"
   </div>
 
   <div class="div-0">
-    <ion-label color="dark"><h2>Update</h2></ion-label>    
+    <ion-label color="dark"><h2><strong>Update</strong></h2></ion-label>    
       <ion-list>
                        
         <ion-item>
-          <ion-label color="dark"><h2>Update Lock ID?</h2> </ion-label>
+          <!-- <ion-label color="dark"><h2></h2> </ion-label> -->
               <ion-toggle 
+              justify="space-between"
               aria-label="Primary toggle" 
               color="primary" [disabled]="lockIDtoggleTrigger" 
               [checked]="lockIDtoggleTrigger" 
-              (ionChange)="lockIdToggle($event)"></ion-toggle>
+              (ionChange)="lockIdToggle($event)">Update Lock ID?</ion-toggle>
         </ion-item>
 
         <ion-item>
@@ -97,7 +97,7 @@ class="ion-no-border"
   </div>
   
   <div class="div-0">
-    <ion-label color="dark"><h2>Gym Setup ...under development..</h2></ion-label>
+    <ion-label color="dark"><h2><strong>Gym Setup ...under development..</strong></h2></ion-label>
     <ion-list>
           <ion-item>
             <ion-label color="dark"> <h2 >Add More Gym </h2> </ion-label>
@@ -108,10 +108,9 @@ class="ion-no-border"
             <ion-label color="dark"><h2>Set Gym Capacity ..</h2></ion-label>
           </ion-item>
 
-          <ion-item> 
-            <ion-label color="dark"><h2>Enable Gift Points</h2> </ion-label>
-            <ion-toggle aria-label="Primary toggle" color="primary" [checked]="false"></ion-toggle>
-          </ion-item>
+          <!-- <ion-item> 
+             <ion-toggle aria-label="Primary toggle" color="primary" [checked]="false">Enable Gift Points</ion-toggle>
+          </ion-item> -->
 
           <!-- if recharge by points allowed then ask per day consumption of point and set warning end date 
           wil be calculated based on points only for all users ..not manually 
@@ -119,7 +118,7 @@ class="ion-no-border"
        if here gift point allowed then in Validity page add one more input filed to enter gift point 
       and based on those points increase end date in DB. -->
 
-          <ion-item>
+          <ion-item detail="true">
             <ion-label color="dark"><h2>Invite Additional Admin</h2></ion-label>
           </ion-item>
     </ion-list>
