--- a/front-end/src/app/pages/login/login.page.html
+++ b/front-end/src/app/pages/login/login.page.html
@@ -9,14 +9,12 @@
 
   <form [formGroup] = "authForm" (ngSubmit)="signIn()">
     <ion-list>
-    <ion-item>
-      <ion-label position="floating"> Email ID </ion-label>
-      <ion-input formControlName="email" type="email" required></ion-input>
+    <ion-item class="item-has-focus ion-touched ion-valid" >   
+      <ion-input labelPlacement="floating" label="Email ID" placeholder="Enter Email" formControlName="email" type="email" required></ion-input>
     </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Password</ion-label>
-      <ion-input formControlName="password" type="password" required>
+    <ion-item class="item-has-focus ion-touched ion-valid" >
+       <ion-input labelPlacement="floating" label="Password" placeholder="Enter Password" formControlName="password" type="password" required>
       </ion-input>
     </ion-item>
 
