--- a/front-end/src/app/pages/me/me.page.html
+++ b/front-end/src/app/pages/me/me.page.html
@@ -9,13 +9,13 @@
   <div class= "ion-padding">
     <ion-item class="ion-item" href="/personalinformation">
       <ion-label>         
-        <ion-text color="white"><strong>{{loggeduserUsername}}</strong></ion-text>
+        <ion-text color="dark"><strong>{{loggeduserUsername}}</strong></ion-text>
       </ion-label>
       <!-- <ion-avatar slot="start">
         <img alt="Silhouette of a person's head" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
       </ion-avatar> -->
       <div class="avatar"> {{getInitials(loggeduserUsername)}}</div> 
-      <ion-icon name="chevron-forward-outline"></ion-icon>
+      <!-- <ion-icon name="chevron-forward-outline"></ion-icon> -->
     </ion-item>    
   </div>
 
