--- a/front-end/src/app/static/personalinformation/personalinformation.page.html
+++ b/front-end/src/app/static/personalinformation/personalinformation.page.html
@@ -52,11 +52,11 @@
     </ion-item>
 
     <ion-item>
-      <ion-label>Allowed In Time :{{memberIntime |date:'shortTime' | uppercase}} </ion-label>
+      <ion-label>Allowed In Time :{{memberIntime |date:'shortTime'}} </ion-label>
     </ion-item>
 
     <ion-item>
-      <ion-label>Allowed Out Time :{{memberOuttime |date:'shortTime' | uppercase}} </ion-label>
+      <ion-label>Allowed Out Time :{{memberOuttime |date:'shortTime'}} </ion-label>
     </ion-item>
 
     
