--- a/front-end/src/app/static/settings/settings.page.html
+++ b/front-end/src/app/static/settings/settings.page.html
@@ -53,6 +53,6 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-title color="danger"(click)="logout()"><strong>Log Out</strong></ion-title>
+    <ion-title color="danger"(click)="logout()"><strong class="center">Log Out</strong></ion-title>
   </ion-toolbar>
 </ion-footer>
