--- a/front-end/src/app/pages/me/me.page.scss
+++ b/front-end/src/app/pages/me/me.page.scss
@@ -37,19 +37,32 @@ ion-content{
          
         // background;          
         
-        margin-top:10px;
+        margin-top:5px;
         margin-right: 10px;
         margin-left: 10px;
 
-        padding-top:20px;
+        padding-top:5px;
         padding-right: 5px;
         padding-left: 5px;
 
         border-radius: 20px;
         border: 0.1px solid #2702f8;
-        min-height: 200px; 
+        min-height: 50px; 
       }
 
+      .div-2 {
+        margin-top:5px;
+        margin-right: 10px;
+        margin-left: 10px;
+
+        padding-top:5px;
+        padding-right: 5px;
+        padding-left: 5px;
+
+        border-radius: 20px;
+        border: 0.1px solid #2702f8;
+        min-height: 10px; 
+      }
       .ion-item-1 {
             padding-top:10px;
         --margin-top: -11px; 
