--- a/front-end/src/app/pages/member-add/member-add.page.html
+++ b/front-end/src/app/pages/member-add/member-add.page.html
@@ -11,33 +11,35 @@
 <ion-content class="ion-padding" style="padding: 7.5%" >
   <form [formGroup]="memberForm" (ngSubmit)="onFormSubmit()">
 
-    <!-- <ion-item>
-      <ion-label position="floating">Gym ID </ion-label>
-      <ion-input 
-      formControlName="gym_id"       
-      type="text" required></ion-input>
-    </ion-item> -->
       
       <ion-item>
-        <ion-label position="floating">Name </ion-label>
-        <ion-input 
-        formControlName="m_name" 
         
-        type="text" required></ion-input>
+        <ion-input
+        position="floating" 
+        label="Name" 
+        labelPlacement="floating"
+        formControlName="m_name"         
+        type="text" 
+        required></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Mobile</ion-label>
+        
         <ion-input 
-        formControlName="mobile" 
-       
-        type="text" required>
+        position="floating"
+        label="Mobile" 
+        labelPlacement="floating"
+        formControlName="mobile"        
+        type="text" 
+        required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Emergency Mobile</ion-label>
         <ion-input 
+        label="Emergency Mobile" 
+        position="floating"
+        labelPlacement="floating"
         formControlName="Emergency_mobile"         
         type="text" 
         required>
@@ -45,51 +47,34 @@
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Aadhar (Optional)</ion-label>
         <ion-input 
+        label="Aadhar(Optional)" 
+        position="floating"
+        labelPlacement="floating"
             type="text" 
             formControlName="aadhar" 
-            maxlength="16" 
-            minlength="16"
-            hint="aadhar" 
+            
            required>
         </ion-input>
       </ion-item>
 
-      <!-- <ion-item>
-        <ion-label position="floating">Location LAT</ion-label>
-        <ion-input 
-        formControlName="m_address_lat" 
+     
+      <ion-item>
         
-         type="text" required="">
+        <ion-input 
+        label="E-Mail" 
+        position="floating"
+        formControlName="email"
+       
+        labelPlacement="floating"
+         type="text"
+         
+         required>
         </ion-input>
+        
       </ion-item>
 
-      <ion-item>
-        <ion-label position="floating"> Location LONG</ion-label>
-        <ion-input 
-        formControlName="m_address_long"  
-        
-        type="text" required>
-        </ion-input>
-      </ion-item> -->
-
-      <ion-item>
-        <ion-label position="floating">E-mail</ion-label>
-        <ion-input 
-        formControlName="email" 
-        [ngModel]="_textValue" (ngModelChange)="ConvertToLower($event)" 
-        type="text" required>
-        </ion-input>
-      </ion-item>
-
-      <!-- <ion-item>
-        <ion-label position="floating">join-date</ion-label>
-        <ion-input  
-        formControlName="m_joindate"        
-        type="text" required>
-        </ion-input>
-      </ion-item> -->
+   
 
       <ion-grid>
         <ion-row>
