--- a/front-end/src/app/pages/member-update/member-update.page.html
+++ b/front-end/src/app/pages/member-update/member-update.page.html
@@ -21,23 +21,23 @@
     </ion-item> -->
       
       <ion-item>
-        <ion-label position="floating">Name </ion-label>
-        <ion-input 
+        <ion-input
+        label="Name:" label-placement="floating"
         formControlName="m_name"         
         type="text" required></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Mobile</ion-label>
         <ion-input 
+        label="Mobile:" label-placement="floating"
         formControlName="mobile"       
         type="text" required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Emergency Mobile</ion-label>
         <ion-input 
+        label="Emergency Mobile:" label-placement="floating"
         formControlName="Emergency_mobile"         
         type="text" required>
         </ion-input>
