--- a/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -1,16 +1,21 @@
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Forget Password ? </ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
-
+<div>
   <form *ngIf="!isOTPmailed" [formGroup]="authForm" (ngSubmit)="getOTP()">
     <ion-list>
     <ion-item>
-      <ion-label position="floating"> Email ID </ion-label>
-      <ion-input formControlName="email" type="email" required></ion-input>
+      
+      <ion-input labelPlacement="floating" label="Email ID" formControlName="email" type="email" required></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Mobile</ion-label>
-      <ion-input formControlName="mobile" type="text" required>
+       
+      <ion-input labelPlacement="floating" label="Mobile" formControlName="mobile" type="text" required>
       </ion-input>
     </ion-item>
 
@@ -24,23 +29,41 @@
     </div>
   </ion-list>
 </form>
+</div>
 
+<div>
 <form *ngIf="isOTPmailed" [formGroup]="resetForm" (ngSubmit)="resetPassword()">
   <ion-list>
   <ion-item>
-    <ion-label position="floating"> Email ID </ion-label>
-    <ion-input formControlName="email" type="email" required></ion-input>
+    
+    <ion-input 
+    labelPlacement="floating" 
+    label="Email ID" 
+    formControlName="email" 
+    type="email" 
+    required
+    placeholder="Enter Email ID" ></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">OTP</ion-label>
-    <ion-input formControlName="otp" type="text" required>
+       <ion-input 
+       labelPlacement="floating" 
+       label="OTP" 
+       formControlName="otp" 
+       type="text" 
+       required
+       placeholder="OTP sent to registered Email ID">
     </ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">New Password</ion-label>
-    <ion-input formControlName="newPassword" type="text" required>
+     <ion-input 
+     labelPlacement="floating" 
+     label="New Password" 
+     formControlName="newPassword" 
+     type="text" 
+     required
+     placeholder="Enter New Password ">
     </ion-input>
   </ion-item>
 
@@ -54,11 +77,16 @@
   </div>
 </ion-list>
 </form>
+</div>
 
 <p class="ion-text-right">Back to <strong routerLink="/login">login</strong></p>
 
   <div *ngIf = "serverErrorMessage">
     {{serverErrorMessage}}
+  </div>
+
+  <div *ngIf = "isOTPmailed">
+    <ion-label class=" ion-text-center">OTP sent to Email ID Please get it From There </ion-label>
   </div>
 
 </ion-content>
