--- a/front-end/src/app/static/personalinformation/personalinformation.page.scss
+++ b/front-end/src/app/static/personalinformation/personalinformation.page.scss
@@ -7,12 +7,15 @@ ion-content{
 }
 
 .timer {
+  --ion-background-color:#f7f7f7f7;
     text-align: center;
     font-family: Arial, sans-serif;
     font-size: 1.4em;
     letter-spacing: -1px;
   }
+
   .timer span {
+    --ion-background-color:#f7f7f7f7;
     font-size: 2em;
     margin: 0 3px 0 15px;
   }
